@@ -19,6 +19,7 @@ Important changes in 1.6 (2018-06-XX) UNRELEASED
 * Bugfix: Fix GPF when accessed.
 * Bugfix: Fix GPF when channel layout changed during playback.
 * Bugfix: If transcode failed, the error was sometimes not reported to the client process, causing it to hang.
+* Bugfix: Sometimes tried to create WebM files with zero width (failed to transcode).
 * Feature: Add MOV target format
 * Feature: Add AIFF target format
 * Feature: Smart conversion option ("Smart Transcode")
